@@ -4,9 +4,11 @@ AUX tlp-usblist-print-unknown-if-device-desc-is-empty.patch 946 SHA256 a05701907
 DIST tlp-gentoo-additions-0.3.7.1.tar.bz2 9073 SHA256 0f139b54adaf5a340cf200d7ee8602e53f94558f94d430d043e907985c4d3a67 SHA512 0a56ea1b7270c8ea5fe1157ae64f42da67e79e02243bf33bffba825b5b53628bace31ab00b3b0448dde00a2db215d7c5012ae4774552f1c4ff0e7e197d45600b WHIRLPOOL dea2a3c80f55945d6b76d8ee8a8b9d9cd27877314fddc0145d0886516b9c274c124c365274845d40a7f091fe7304b2a69827d136aefa75ce53b89e4905814c51
 DIST tlp-gentoo-additions-0.3.8.1.tar.bz2 9227 SHA256 b04e22b5a5c63665ef742ca88a100694f21072e80162c34a4a7ef00367681343 SHA512 cc44e8dfc1f7e103df89c5b80e1f1f7de0fecf022eafaa497d733980cf0396ca136356ff5606cbafe693a05b7c2c315858b007acd26fa01728efc061ab2cab07 WHIRLPOOL 7f201107509da020dbe7d5e223cafb2f5ee70e73dde21f14c786f9b9eb76970e9bcecf39c5ecbdc3815b29808e7c120660ce141927492e8e4e8d788cd7d456e6
 DIST tlp-gentoo-additions-0.3.9.tar.bz2 9209 SHA256 3e82e50c4f673ee3225f58aae90cac2eb04fdca4293572da09411dbbebe0f51b SHA512 cfef43fb3993a021520d7b6571d31b27130a1c58851c93cd1b8b936a1d73a7362f9d084553baf2675558b29a8d1dab5f119420b1e62a19e8a834d35776db1953 WHIRLPOOL e7c387cc2b377dfa345bc491fa941de7d95da0354b3b60e13dbd68c433d25d7e37ab0a1f8ad89b166d05054b5b10977869b0792f1dd9d35fd5a50c0ffd2e91ff
+DIST tlp-gentoo-additions-0.4.tar.bz2 6005 SHA256 2a88298350a2f6238ec7e2d12518f89940a54916dd5beff202a2514ce01a61d4 SHA512 4105232c4844e14d7d35464575d2a36ce87cc40b2b3c112e9435ab2b1d811062fb1a02b44cc5abd183d4a87ede9d711f6d0308d142b58e8c508714874c233be1 WHIRLPOOL 4c81da249a7325c41ccf56a7db9214fa5562665800f469341be5b5566ae0af3c306420ad526d20e38105d9992eb73285d4c80c494e2e0f014fb5c7d9c6e3afd3
 EBUILD tlp-0.3.7.1.ebuild 5536 SHA256 20627562c4aaffbc8c1880c27efcce0c72c9e4e85955657f4eed25e5b0cc8c3d SHA512 a9e84f5ba81c25a1ea472108fe3880d11edf69665bffbfeae5b015e0e2dfe3ff329320b682b3230a95f23b937a0dbd9e263f9e7bd48517b2685bbd0216a83ba4 WHIRLPOOL 43cbff56ccd6d5463bb9a3dce40bca89a0599b9f76709fea46b17451adbb8ee4e5eb7f70ae2a7f9f05d28753fe2056bb112929b84bd378b962e078a93d048c03
 EBUILD tlp-0.3.8.1.ebuild 5718 SHA256 f10981957ea2d21be73723804e77e495c3d32ba4241afd972e849213768de6d1 SHA512 91fc479eef7704332c6d4ab2228ef049a399ca950ccbf3ec9ff3a744b9751380084895eb1dc3620336c6fa81ec831c4cf6304f66515be3360fb48a5b1937ed46 WHIRLPOOL 5ddca76473a1a9e1271c2eab48d7da70870669ec20a915e053422067a4d7c2ab6eff0e78507ad989c9b1458cdacf17b5658b3ba041575c57efe87c5978f9a45e
 EBUILD tlp-0.3.9.900_pre20130730.ebuild 5964 SHA256 164218f7c504358616af1a51160914bab6fd603694b9be0516cac43ed0688479 SHA512 71e59490ff74a29b5820de98176f66f1a4bec3707949e64060a9c266419e5f0859d6c43c2bd62f5b1ae9a36e5f657bd02d5ed99360313ae97609551546666b74 WHIRLPOOL 01912535116034423c7003e576f41c8d1a736c43edfe0b6a86d039ec92cf4e735a068ef3a64e284114d5819b940a880a37a445d3e131dabbe01e0b07bd3f80ba
 EBUILD tlp-0.3.9.ebuild 5752 SHA256 141c140eff808f8d39981f3d1b46e216a807f76ef1a36ff62d5658c816027983 SHA512 9f3cf9d7fef6c65d3a7ceaf829cdf5f39cb43cc78ac7b8238fa5610fb2a2fd62966c9ac6d5f03395bf0a4c618ae472cff41960e839029602ca3f054685592326 WHIRLPOOL eec311643fe71a51243e8049ae821894a71e2bd161733091572e2f6b69717250e99f4434a65088e9137465d690a350aed5adf4e773490fefec1473a70a385ca7
-MISC ChangeLog 7273 SHA256 f1f0c0005140f9a1c4534f34a3d6a58148a25a7bd11208298de4f24d8e738983 SHA512 a8d574ff3b703b9705445afa3689ab296eea902f2275b04c7a2beda775ac26244937760e2123b5a872274958c78b8dba16376505422d0abd66358cd9edd5367f WHIRLPOOL 080a1e9994f92efd5d90d9e4b9ea1cef3df3228855297377078f777a33be4ef3c13342a300c32d4e26d27b135ac5419f5f10c2b828c550ed9b9b0673bec05a5f
-MISC metadata.xml 1691 SHA256 fdfca8125ccdbc41454ee45f2047fb48d64d7e91559ee632b0f9429998fe2ced SHA512 24a4630f91705f6898b8091a37e712ef81356846b39c843725e3dfc1f413f690450c4638f0c049cdebd3af20bb2e52a0b7cc1a20e204e9a5a113efb757911a97 WHIRLPOOL 52ad6e53118146ef27435d93bc4d2937ad74d75dcd220b56ae0e09a13539d079bdc73cae16fdccab18c8448fdf77740e9fd382cc55f509336f34439241e79d63
+EBUILD tlp-0.4.ebuild 5700 SHA256 4e4a2e3338e173e1a84c0ebf40f101063b8ed2498356e5a98a9f72c924e20afe SHA512 1d7034fc01b343381dab647a35c2cd99d9428f7d7413eca07cb6b22060aa2c752219828515d5203e0bc9a12102fc0b402f36c4962f7df536ba91474c19ac0845 WHIRLPOOL d2eef73337d0bcd1f933fdddc84bd6378c6c8443ea98d68e1f279552bcf39a5451528706a170959ee5d9d8aca092291ec971650c72c911cca54b91a4bd1f4ffa
+MISC ChangeLog 7585 SHA256 62fe24890c00e2c6f265919c4089926aacbd3af577e6a5fa1c0c3e72c24b9b08 SHA512 e09e94c1ea0d8d4f7d94809a224ad8847bb11678f845631b118ef70bf56adeecc817164ac22317d04a838480de2bf953f4472264070b5b8639182f144c05a4f5 WHIRLPOOL d24ddd446af4be7af83eaa1e8587a68538b2d2369354d54a7edd84ce551e8445e3788015126c33e5a767a5d59b35dba33cd97eaf8649090fcc41132f1d04f245
+MISC metadata.xml 1751 SHA256 0d51373a459e7f07c4a9fa9e34aca2b368585ffb48c4cc460552ccd477ffce26 SHA512 4a345eb5a5809a8c724d1a094bc211b7fc9e04fbb4ef14735d43058a083d20d0db9dd161831750c9a877e01d444ac78b593b97b751926014c6330f291227c18a WHIRLPOOL e7d0863c48b1afc537bf33d4a9117ff81c437eac3ce92588b96dd20f3885819485c26a9d0dc43fcad0c377a81bd3c5b80090244ce6f0cb18112e8bb6106c1a74
